<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PlanDetailActivity" >

    <!-- 标题 -->
    <TextView
        android:id="@+id/plan_detail_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
         />
    
    <!-- 起点 -->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        <TextView 
        android:text="@string/plan_start_location"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_start_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
	
    <!-- 终点 -->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_terminate_location"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_terminate_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
	</LinearLayout>
    
    <!-- 路程 -->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_expected_distance"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_expected_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 预计时间-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_expected_time"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_expected_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 参加人数 -->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_ppl_going"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_ppl_going"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 估计人数-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_ppl_expected"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_ppl_expected"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 开始时间-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_start_time"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 结束时间-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView
        android:text="@string/plan_end_time"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_end_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 赞助商-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_sponsor"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_sponsor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 附言-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    <TextView 
        android:text="@string/plan_remark"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_remark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 计划状态-->
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    <TextView 
        android:text="@string/plan_status"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    </LinearLayout>
    
    <!-- 创建人-->
    <TextView 
        android:text="@string/plan_creator"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/plan_detail_creator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    
    <!-- 计划ID-->
    <TextView 
        android:id="@+id/plan_detail_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="invisible"
        />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/plan_detail_join_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plan_detail_join_plan"
            ></Button>
        
        <Button
            android:id="@+id/plan_detail_quit_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plan_detail_quit_plan"
            ></Button>
        
        <Button
            android:id="@+id/plan_detail_interest_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plan_detail_interest_plan"
            ></Button>
        
        <Button
            android:id="@+id/plan_detail_cancel_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_plan_detail_cancel_plan"
            ></Button>
        
        <Button
            android:id="@+id/plan_detail_update_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_update"
            ></Button>
        <Button
            android:id="@+id/plan_detail_check_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan_check_route"
            ></Button>
        
        <Button
            android:id="@+id/plan_detail_start_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开始"
            ></Button>
            
        <Button
            android:id="@+id/plan_detail_end_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="結束"
            ></Button>
    </LinearLayout>
    
</LinearLayout>
</ScrollView>