<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView 
                android:text="@string/enter_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                />

            <EditText 
                android:inputType="text"
                android:id="@+id/register_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView 
                android:text="@string/enter_password"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                />

            <EditText 
                android:inputType="textPassword"
                android:id="@+id/register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView 
                android:text="@string/enter_password_again"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                />

            <EditText 
                android:inputType="textPassword"
                android:id="@+id/register_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView 
                android:text="@string/enter_emailaddress"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                />

            <EditText 
                android:inputType="text"
                android:id="@+id/register_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView 
                android:text="@string/enter_display_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                />

            <EditText 
                android:inputType="text"
                android:id="@+id/register_display_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        
        <Button 
            android:text="@string/submit"
            android:id="@+id/btn_register_submit"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            />
    </LinearLayout>

</ScrollView>