<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">   

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    >
   	
    <!--  Title -->
	<TextView
	    android:text="@string/plan_name"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="15sp"
        />
	<EditText
	    android:id="@+id/plan_name"
	    android:hint="名字"
	    android:singleLine="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	
	<!-- Selection button -->
	<Button 
	    android:id="@+id/plan_select_locations"
	    android:text="@string/plan_select_locations"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	
	<!-- Distance -->
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView
	        android:text="@string/plan_expected_distance"
	        android:layout_width="100dp"
        	android:layout_height="35dp"
	        />
	    <TextView
	    android:id="@+id/plan_estimate_distance"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:visibility="visible"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        />
	    
	</LinearLayout>
	
	<!-- Expected Time -->
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView
	         android:text="@string/plan_expected_time"
	        android:layout_width="100dp"
        	android:layout_height="35dp"
	        />
	    	<TextView
	    android:id="@+id/plan_expected_time"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:visibility="visible"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        />
	    
	</LinearLayout>
	<!-- People expected -->
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView
	        android:text="@string/plan_ppl_expected"
	        android:layout_width="100dp"
        	android:layout_height="35dp" 
	        />	
	    <Button 
	        android:id="@+id/pplexpected"
	        android:layout_width="70dp" 
	        android:layout_height="35dp"
	        android:paddingLeft="10dp"
	        android:textSize="12sp"
	        android:text="2"
	        android:textColor="@color/white"
	        />
	</LinearLayout>
	
	<!-- Remark -->
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	<TextView 
	    android:text="@string/plan_remark"
	    android:layout_width="100dp"
        	android:layout_height="35dp" 
	    />
	<EditText
	    android:id="@+id/planremark"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:visibility="visible"
        android:paddingLeft="10dp"
        android:textSize="12sp"
        />
	</LinearLayout>
	<!-- Sponsor -->
<!-- 	<LinearLayout  -->
<!-- 	    android:orientation="horizontal" -->
<!-- 	    android:layout_width="fill_parent" -->
<!-- 	    android:layout_height="wrap_content" -->
<!-- 	    > -->
<!-- 	    <TextView -->
<!-- 	        android:text="@string/plan_sponsor" -->
<!-- 	        android:layout_width="100dp" -->
<!--         	android:layout_height="35dp"  -->
<!-- 	        />	 -->
<!-- 	    <EditText -->
<!-- 	    android:id="@+id/plansponsor" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="35dp" -->
<!--         android:visibility="visible" -->
<!--         android:paddingLeft="10dp" -->
<!--         android:textSize="12sp" -->
<!--         /> -->
<!-- 	</LinearLayout> -->
	
	<!-- Prize -->
<!-- 	<LinearLayout  -->
<!-- 	    android:orientation="horizontal" -->
<!-- 	    android:layout_width="fill_parent" -->
<!-- 	    android:layout_height="wrap_content" -->
<!-- 	    > -->
<!-- 	    <TextView  -->
<!-- 	        android:text="@string/plan_prizes" -->
<!-- 	        android:layout_width="100dp" -->
<!--         	android:layout_height="35dp" -->
<!-- 	        /> -->
<!-- 	    <EditText -->
<!-- 	    android:id="@+id/planprize" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="35dp" -->
<!--         android:visibility="visible" -->
<!--         android:paddingLeft="10dp" -->
<!--         android:textSize="12sp" -->
<!--         /> -->
<!-- 	</LinearLayout> -->
	
	
	<!-- 提交按钮 -->
	<Button 
	    android:id="@+id/plan_submit"
	    android:text="@string/plan_submit_button"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:visibility="visible"
    	/>  
</LinearLayout>
</ScrollView> 